--- a/example/intersection_observer.html
+++ b/example/intersection_observer.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>おみくじDEMO</title>
+	<title>IntersectionObserver</title>
 	<style>
 		*:where(:not(iframe,canvas,img,svg,video):not(svg *,symbol *)){all:unset;display:revert}*,*::before,*::after{box-sizing:border-box}a,button{cursor:revert}ol,ul,menu{list-style:none}img{max-width:100%}table{border-collapse:collapse}textarea{white-space:revert}meter{-webkit-appearance:revert;appearance:revert}::placeholder{color:unset}:where([hidden]){display:none}:where([contenteditable]){-moz-user-modify:read-write;-webkit-user-modify:read-write;overflow-wrap:break-word;-webkit-line-break:after-white-space}:where([draggable="true"]){-webkit-user-drag:element}
 	</style>
 	<style>
-		body {
-		}
+
 		.box {
 			display: grid;
 			place-items: center;
 			width: 100%;
-			height: 1000px;
+			height: 100svh;
 			background: #F5EBD3;
+			font-size: 2rem;
 		}
 
 		.box-2 {
@@ -48,35 +48,34 @@
 		}
 
 		.is-intersect::before {
-			transform: translateX(100px);
-			transition: width 2s, height 2s, background-color 2s, transform 2s;
+			translate: 400px 0;
+			transition: translate 3s ease-out;
 		}
 	</style>
 	<script>
+		//https://developer.mozilla.org/ja/docs/Web/API/Intersection_Observer_API
 		document.addEventListener("DOMContentLoaded", () => {
 
-			const target = document.querySelector('#js-scrollArea'); 
+			const target = document.getElementById('js-scrollArea');
 			
 			const option = {
 				root: null,
-				rootMargin: "-50% 0px",
-				threshold: 0
+				rootMargin: '0px',
+				threshold: .5
 			};
 
-			// 交差した際の処理を記載
-			const callback = function (entries, observer) {
+			const intersectionCallback = function (entries, observer) {
 				entries.forEach(function (entry) {
 					if (entry.isIntersecting) {
-						// 処理実行
 						entry.target.classList.add("is-intersect");
-						// 処理完了後、監視を止めたい場合
 						//observer.unobserve(entry.target);
 					}
 				});
 			};
-			const observer = new IntersectionObserver(callback, option);
 
-			observer.observe(target); // 監視を開始
+			const observer = new IntersectionObserver(intersectionCallback, option);
+
+			observer.observe(target);
 
 		});
 
@@ -88,7 +87,7 @@
 <div class="wrapper">
 	<div class="box box-1">box1</div>
 	<div id="js-scrollArea" class="box box-2"><p>box2</p></div>
-	<div class="box box-3">box1</div>
+	<div class="box box-3">box3</div>
 </div>
 
 </body>
